--- a/src/App/Server/GoldEx.Server/Components/Account/Shared/StatusMessage.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Shared/StatusMessage.razor
@@ -1,5 +1,4 @@
-﻿@using GoldEx.Server.Services
-@if (!string.IsNullOrEmpty(DisplayMessage))
+﻿@if (!string.IsNullOrEmpty(DisplayMessage))
 {
     <MudAlert Class="mb-2" Variant="Variant.Outlined" Severity="@Severity" ContentAlignment="HorizontalAlignment.Start" Dense="true">@DisplayMessage</MudAlert>
 }
