--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/_Imports.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/_Imports.razor
@@ -6,12 +6,14 @@
 @using Microsoft.AspNetCore.WebUtilities
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Http.Features
+@using Microsoft.AspNetCore.Authorization
+@using Microsoft.EntityFrameworkCore
 @using GoldEx.Server.Components.Account.Shared
 @using GoldEx.Sdk.Server.Domain.Entities.Identity
 @using GoldEx.Server.Services
 @using GoldEx.Server.Application.Extensions
+@using GoldEx.Sdk.Common
 @using GoldEx.Shared.Routings
 
-
 @layout ManageLayout
-@attribute [Microsoft.AspNetCore.Authorization.Authorize]
+@attribute [Authorize]
