Update UserList and add EditUser components

--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/_Imports.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/_Imports.razor
@@ -14,6 +14,7 @@
 @using GoldEx.Server.Application.Extensions
 @using GoldEx.Sdk.Common
 @using GoldEx.Shared.Routings
+@using GoldEx.Sdk.Server.Application.Exceptions
 
 @layout ManageLayout
 @attribute [Authorize]
