--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/_Imports.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/_Imports.razor
@@ -4,11 +4,14 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
+@using Microsoft.EntityFrameworkCore
 @using Microsoft.AspNetCore.Authentication
+@using Microsoft.Extensions.Caching.Memory
 @using GoldEx.Server.Common.Enums
 @using GoldEx.Sdk.Server.Domain.Entities.Identity
 @using GoldEx.Server.Services
 @using GoldEx.Server.Components.Account.Shared
+@using GoldEx.Sdk.Server.Infrastructure.Abstractions
 @using GoldEx.Shared.Routings
 @using MudBlazor.StaticInput
 @using Net.Codecrete.QrCodeGenerator
