--- a/src/App/Server/GoldEx.Server/wwwroot/css/app.css
+++ b/src/App/Server/GoldEx.Server/wwwroot/css/app.css
@@ -60,3 +60,20 @@ h1:focus {
 .min-vh-100 {
     min-height: 100vh;
 }
+
+.box-bg {
+    background-image: url('/assets/img/login-bg.jpg');
+    position: fixed; /* Stay in place even when scrolling */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('/assets/img/login-bg.jpg');
+    background-size: cover; /* Cover the entire viewport */
+    background-position: center; /* Center the image */
+    background-repeat: no-repeat; /* Prevent image tiling */
+}
+
+.box-content {
+
+}
