Update layout, navigation, and authentication logic

--- a/src/App/Client/GoldEx.Client.Components/Layouts/BaseLayout.razor
+++ b/src/App/Client/GoldEx.Client.Components/Layouts/BaseLayout.razor
@@ -73,7 +73,10 @@
                 Divider = "#292838",
                 OverlayLight = "#1e1e2d80",
             },
-            LayoutProperties = new LayoutProperties(),
+            LayoutProperties = new LayoutProperties
+            {
+                //DefaultBorderRadius = "50"
+            },
             Typography = new Typography
             {
                 Default = new DefaultTypography
