--- a/src/App/Client/GoldEx.Client.Components/Layouts/EmptyBoxLayout.razor
+++ b/src/App/Client/GoldEx.Client.Components/Layouts/EmptyBoxLayout.razor
@@ -1,9 +1,9 @@
 ﻿@inherits LayoutComponentBase
 @layout BaseLayout
 
-<div class="d-flex justify-content-center align-items-center min-vh-100 box-bg">
+<div class="d-flex justify-content-center align-items-center min-vh-100 box-bg ">
     <MudContainer MaxWidth="MaxWidth.Small" Class="mx-auto mt-5">
-        <MudPaper Elevation="4" Class="p-4">
+        <MudPaper Elevation="4" Class="p-4 rounded-5">
             @Body
         </MudPaper>
     </MudContainer>
