--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Login.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Login.razor
@@ -37,7 +37,8 @@
             <MudItem xs="12" Class="mb-0">
                 <StatusMessage Message="@_errorMessage" Severity="Severity.Error" />
             </MudItem>
-        }
+        }   
+        <StatusMessage />
 
         <MudItem xs="12" Class="mt-0">
             <MudStaticButton Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" FormAction="FormAction.Submit" StartIcon="@Icons.Material.Filled.Login">ورود به سامانه</MudStaticButton>
