--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/RegisterConfirmation.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/RegisterConfirmation.razor
@@ -1,4 +1,4 @@
-﻿@attribute [Route(ClientRoutes.Accounts.RegisterConfirmation)]
+﻿@* @attribute [Route(ClientRoutes.Accounts.RegisterConfirmation)]
 
 @layout EmptyBoxLayout
 
@@ -18,3 +18,4 @@
         <MudText Typo="Typo.body1">لطفا ایمیل خود را جهت تایید ثبت نام چک کنید</MudText>
     </MudItem>
 </MudStack>
+ *@
