Add Fetch price api and background services and Test projects

--- a/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/NewUser.razor
+++ b/src/App/Server/GoldEx.Server/Components/Account/Pages/Manage/NewUser.razor
@@ -134,6 +134,6 @@
 
         [Required(ErrorMessage = "وارد کردن {0} الزامی است")]
         [Display(Name = "ایمیل")]
-        public string Email { get; set; }
+        public string Email { get; set; } = default!;
     }
 }
