--- a/src/App/Client/GoldEx.Client/_Imports.razor
+++ b/src/App/Client/GoldEx.Client/_Imports.razor
@@ -11,3 +11,6 @@
 @using MudBlazor
 @using GoldEx.Client.Components.Components
 @using GoldEx.Client.Components.Extensions
+@using GoldEx.Client.Pages.Home.Components
+@using GoldEx.Sdk.Common.Extensions
+
