Add health checks

--- a/src/App/Client/GoldEx.Client/Pages/Home/Components/PriceBoard.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Home/Components/PriceBoard.razor
@@ -21,7 +21,7 @@
     </HeaderContent>
     <GroupHeaderTemplate>
         <!-- TODO: fix rtl-->
-        <MudTh Class="mud-table-cell-custom-group" colspan="5">@($"{context.GroupName} {context.Key}")</MudTh>
+        <MudTh Class="mud-table-cell-custom-group" colspan="5">@($"{context.Key}")</MudTh>
     </GroupHeaderTemplate>
     <RowTemplate>
         <MudTd DataLabel="عنوان">@context.Title</MudTd>
