Add signal api for fetching price and change price table structrure

--- a/src/App/Client/GoldEx.Client/Pages/Home/Components/PriceBoard.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Home/Components/PriceBoard.razor
@@ -25,7 +25,7 @@
     </GroupHeaderTemplate>
     <RowTemplate>
         <MudTd DataLabel="عنوان">@context.Title</MudTd>
-        <MudTd DataLabel="قیمت">@context.Value.FormatPrice()</MudTd>
+        <MudTd DataLabel="قیمت">@context.Value</MudTd>
         <MudTd DataLabel="تغییرات">
             @if (context.Change.Contains("-"))
             {
