Add Health status indicator

--- a/src/App/Client/GoldEx.Client.Components/Layouts/_Imports.razor
+++ b/src/App/Client/GoldEx.Client.Components/Layouts/_Imports.razor
@@ -8,3 +8,4 @@
 @using GoldEx.Client.Components.Services
 @using GoldEx.Shared.Abstractions
 @using MudBlazor
+@using GoldEx.Client.Components.Components
