--- a/src/App/Client/GoldEx.Client.Components/Layouts/Components/Profile.razor
+++ b/src/App/Client/GoldEx.Client.Components/Layouts/Components/Profile.razor
@@ -1,33 +1,50 @@
-﻿@using GoldEx.Shared.Routings
+﻿@using GoldEx.Client.Components.Extensions
+@using GoldEx.Sdk.Common.Extensions
+@using GoldEx.Shared.Routings
 @inherits GoldEx.Client.Components.Components.GoldExComponentBase
 
-<MudIconButton Color="Color.Inherit" Edge="Edge.End" OnClick="ToggleProfile">
-    <MudAvatar Size="Size.Small" Color="Color.Secondary">M</MudAvatar>
-</MudIconButton>
+<AuthorizeView>
+    <Authorized>
+        <MudIconButton Color="Color.Inherit" Edge="Edge.End" OnClick="ToggleProfile" Icon="@Icons.Material.Filled.Person">
+        </MudIconButton>
 
-<MudPopover Elevation="5" Open="@_isProfileOpen" Fixed="false" TransformOrigin="Origin.TopLeft" AnchorOrigin="Origin.BottomLeft" Class="px-4 pt-4">
-    <MudIconButton OnClick="@ToggleProfile" Class="p-0 m-0" Color="Color.Error" Icon="@Icons.Material.Filled.Close"></MudIconButton>
+        <MudPopover Elevation="5" Open="@_isProfileOpen" Fixed="false" TransformOrigin="Origin.TopLeft" AnchorOrigin="Origin.BottomLeft" Class="px-4 pt-4">
+            <MudIconButton OnClick="@ToggleProfile" Class="p-0 m-0" Color="Color.Error" Icon="@Icons.Material.Filled.Close"></MudIconButton>
 
-    <div class="d-flex flex-column align-center">
-        <MudBadge Color="@_color" Overlap="true" Bordered="true">
-            <MudAvatar Size="Size.Large" Color="Color.Secondary">S.A</MudAvatar>
-        </MudBadge>
-        <MudText Typo="Typo.h6" Class="mt-2">@_username</MudText>
-        <MudText Typo="Typo.body2" Color="Color.Dark">
-            <AuthorizeView>
-                @context.User.Identity?.Name
-            </AuthorizeView>
-        </MudText>
-    </div>
+            <div class="d-flex flex-column align-center">
+                <MudTooltip Text="@_status" Placement="Placement.Right" Arrow="true">
+                    <MudBadge Color="@_color" Overlap="true" Bordered="true">
+                        <MudAvatar Size="Size.Large" Color="Color.Secondary">@context.User.GetDisplayName().GetInitialsWithPeriods()</MudAvatar>
+                    </MudBadge>
+                </MudTooltip>
 
-    <MudDivider Class="my-4" />
+                <MudText Typo="Typo.h6" Class="mt-2">@_username</MudText>
+                <MudText Typo="Typo.body2">
+                    @context.User.Identity?.Name
+                </MudText>
+            </div>
 
-    <MudButton Size="Size.Small" StartIcon="@Icons.Material.Filled.ManageAccounts" Class="mt-2"
-               Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" OnClick="@NavigateToProfile">مدیریت حساب</MudButton>
-    <MudButton Size="Size.Small" StartIcon="@Icons.Material.Filled.Healing" Class="mt-2"
-               Variant="Variant.Filled" Color="Color.Primary" FullWidth="true" Href="@ClientRoutes.Health.Base">وضعیت سلامت</MudButton>
-    <MudButton Size="Size.Small" Class="mt-2 mb-4" Variant="Variant.Filled"
-               StartIcon="@Icons.Material.Filled.Logout" Color="Color.Error" FullWidth="true" Href="@ApiRoutes.Account.Logout">خروج</MudButton>
+            <MudDivider Class="my-4" />
 
+            <div class="d-flex flex-column align-center">
+                <MudButtonGroup Color="Color.Primary" Variant="Variant.Filled" Size="Size.Large" Class="mb-4">
+                    <MudTooltip Text="مدیریت حساب" Placement="Placement.Right" Arrow="true">
+                        <MudIconButton Icon="@Icons.Material.Filled.ManageAccounts" OnClick="@NavigateToAccountManagement"></MudIconButton>
+                    </MudTooltip>
 
-</MudPopover>
+                    <MudTooltip Text="عملکرد برنامه" Placement="Placement.Bottom" Arrow="true">
+                        <MudIconButton Icon="@Icons.Material.Filled.MonitorHeart" Href="@ClientRoutes.Health.Base"></MudIconButton>
+                    </MudTooltip>
+
+                    <MudTooltip Text="خروج" Placement="Placement.Right" Arrow="true">
+                        <MudIconButton Icon="@Icons.Material.Filled.ExitToApp" Href="@ApiUrls.Account.Logout(_currentUrl)"></MudIconButton>
+                    </MudTooltip>
+                </MudButtonGroup>
+            </div>
+
+        </MudPopover>
+    </Authorized>
+    <NotAuthorized>
+        <MudIconButton Color="Color.Inherit" Edge="Edge.End" Icon="@Icons.Material.Filled.Key" Href="@ClientRoutes.Accounts.Login"></MudIconButton>
+    </NotAuthorized>
+</AuthorizeView>
