Add iransans font

--- a/src/App/Client/GoldEx.Client.Components/Layouts/BaseLayout.razor
+++ b/src/App/Client/GoldEx.Client.Components/Layouts/BaseLayout.razor
@@ -81,7 +81,7 @@
             {
                 Default = new DefaultTypography
                 {
-                    FontFamily = ["Vazirmatn", "Helvetica", "Arial", "sans-serif"]
+                    FontFamily = ["IRANSans", "Vazirmatn", "Helvetica", "Arial", "sans-serif"]
                 }
             }
         };
