--- a/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
@@ -27,6 +27,11 @@
             </NotAuthorized>
         </AuthorizeView>
     </div>
-
-    <PriceBoard Class="mt-2"/>
+    <MudExpansionPanels Elevation="3">
+        <MudExpansionPanel Text="قیمت ارز، طلا و سکه">
+            <PriceBoard Class="mt-2" />
+        </MudExpansionPanel>
+        <MudExpansionPanel Text="آخرین اخبار">
+        </MudExpansionPanel>
+    </MudExpansionPanels>
 </MudContainer>
