--- a/src/App/Server/GoldEx.Server/wwwroot/css/app.css
+++ b/src/App/Server/GoldEx.Server/wwwroot/css/app.css
@@ -1,4 +1,5 @@
 @import '../fonts/vazir/Vazirmatn-font-face.css';
+@import '../fonts/IRANSANS/IRANSANS-font-face.css';
 
 a, .btn-link {
     color: #006bb7;
