--- a/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
@@ -6,9 +6,7 @@
 <MudContainer MaxWidth="MaxWidth.Large">
     <div class="row">
         <div class="col-12 col-md-6">
-            <h3 class="m-0" style="font-weight: 600;">
-                میز خدمات الکترونیکی گلدکس
-            </h3>
+            <MudText Typo="Typo.h4" Style="font-weight: 500"> میز خدمات الکترونیکی گلدکس</MudText>
             <div class="my-4">
                 <AuthorizeView>
                     <Authorized>
@@ -31,7 +29,7 @@
         <MudExpansionPanel Text="قیمت ارز، طلا و سکه">
             <PriceBoard Class="mt-2" />
         </MudExpansionPanel>
-        <MudExpansionPanel Text="آخرین اخبار">
+        <MudExpansionPanel Text="اجناس من">
         </MudExpansionPanel>
     </MudExpansionPanels>
 </MudContainer>
