--- a/src/App/Client/GoldEx.Client/_Imports.razor
+++ b/src/App/Client/GoldEx.Client/_Imports.razor
@@ -6,11 +6,15 @@
 @using Microsoft.AspNetCore.Components.Web
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.JSInterop
-@using GoldEx.Client
 @using MudBlazor
+@using GoldEx.Client
 @using GoldEx.Client.Components.Components
 @using GoldEx.Client.Components.Extensions
 @using GoldEx.Client.Pages.Home.Components
 @using GoldEx.Sdk.Common.Extensions
-
+@using GoldEx.Shared.Routings
+@using GoldEx.Sdk.Common
+@using GoldEx.Client.Pages.Products.Components
+@using GoldEx.Client.Pages.Products.ViewModels
