--- a/src/App/Server/GoldEx.Server/wwwroot/css/app.css
+++ b/src/App/Server/GoldEx.Server/wwwroot/css/app.css
@@ -74,3 +74,6 @@ h1:focus {
     background-position: center; /* Center the image */
     background-repeat: no-repeat; /* Prevent image tiling */
 }
+.mud-popover{
+    left: 0;
+}
