--- a/src/App/Server/GoldEx.Server/Components/App.razor
+++ b/src/App/Server/GoldEx.Server/Components/App.razor
@@ -29,6 +29,7 @@
     <Routes @rendermode="RenderModeForPage" />
     <script src="_framework/blazor.web.js"></script>
 
+    <script src=@Assets["_framework/blazor.web.js"]></script>
     <script src=@Assets["_content/MudBlazor/MudBlazor.min.js"]></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
 </body>
