--- a/src/App/Client/GoldEx.Client/Pages/Weather.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Weather.razor
@@ -1,5 +1,11 @@
 ﻿@page "/weather"
 
+@using GoldEx.Client.Data
+@using GoldEx.Client.Model
+@using Microsoft.EntityFrameworkCore
+
+@inject IDbContextFactory<OfflineDbContext> DbContextFactory
+
 <PageTitle>Weather</PageTitle>
 
 <h1>Weather</h1>
@@ -14,50 +20,52 @@ else
 {
     <table class="table">
         <thead>
-            <tr>
-                <th>Date</th>
-                <th aria-label="Temperature in Celsius">Temp. (C)</th>
-                <th aria-label="Temperature in Farenheit">Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
+        <tr>
+            <th>Date</th>
+            <th>Temp. (C)</th>
+            <th>Temp. (F)</th>
+            <th>Summary</th>
+        </tr>
         </thead>
         <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
+        @foreach (var forecast in forecasts)
+        {
+            <tr>
+                <td>@forecast.Date.ToLocalTime().ToString("G")</td>
+                <td>@forecast.TemperatureC</td>
+                <td>@forecast.TemperatureF</td>
+                <td>@forecast.Summary</td>
+            </tr>
+        }
         </tbody>
     </table>
 }
 
+<button class="btn btn-primary" @onclick="AddWeatherForecast">Add weather forecast</button>
+
 @code {
-    private WeatherForecast[]? forecasts;
+
+    private List<WeatherForecast>? forecasts;
+
+    private async Task AddWeatherForecast()
+    {
+        await using var dbContext = await DbContextFactory.CreateDbContextAsync();
+        var forecast = await dbContext.WeatherForecasts.AddAsync(new()
+            {
+                Date = new DateTimeOffset(2024, 1, 4, 10, 10, 10, TimeSpan.Zero),
+                Summary = "Test",
+                TemperatureC = 17
+            });
+        await dbContext.SaveChangesAsync();
+        forecasts!.Add(forecast.Entity);
+    }
 
     protected override async Task OnInitializedAsync()
     {
-        // Simulate asynchronous loading to demonstrate a loading indicator
-        await Task.Delay(500);
+        await using var dbContext = await DbContextFactory.CreateDbContextAsync();
+        forecasts = await dbContext.WeatherForecasts.OrderBy(c => c.Date).ToListAsync();
 
-        var startDate = DateOnly.FromDateTime(DateTime.Now);
-        var summaries = new[] { "Freezing", "Bracing", "Chilly", "Cool", "Mild", "Warm", "Balmy", "Hot", "Sweltering", "Scorching" };
-        forecasts = Enumerable.Range(1, 5).Select(index => new WeatherForecast
-        {
-            Date = startDate.AddDays(index),
-            TemperatureC = Random.Shared.Next(-20, 55),
-            Summary = summaries[Random.Shared.Next(summaries.Length)]
-        }).ToArray();
-    }
-
-    private class WeatherForecast
-    {
-        public DateOnly Date { get; set; }
-        public int TemperatureC { get; set; }
-        public string? Summary { get; set; }
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+        await base.OnInitializedAsync();
     }
 }
+
