--- a/src/App/Client/GoldEx.Client/Pages/Products/Components/ProductsList.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Products/Components/ProductsList.razor
@@ -1,6 +1,6 @@
 ﻿@inherits GoldExComponentBase
 
-<MudTable T="ProductVm" MultiSelection="true" Hover="true" @ref="_table" Dense="true" ServerData="LoadProductsAsync">
+<MudTable T="ProductVm" MultiSelection="true" Hover="true" @ref="_table" Dense="true" ServerData="LoadProductsAsync" Breakpoint="Breakpoint.Sm">
     <ToolBarContent>
         <MudText Typo="Typo.h6">اجناس من</MudText>
         <MudSpacer />
