add authorized view for products and comment out service-workers

--- a/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
+++ b/src/App/Client/GoldEx.Client/Pages/Home/Index.razor
@@ -34,8 +34,10 @@
         <MudExpansionPanel Text="قیمت ارز، طلا و سکه">
             <PriceBoard Class="mt-2"/>
         </MudExpansionPanel>
-        <MudExpansionPanel Text="اجناس من">
-            <ProductsList/>
-        </MudExpansionPanel>
+        <AuthorizeView>
+            <MudExpansionPanel Text="اجناس من">
+                <ProductsList/>
+            </MudExpansionPanel>
+        </AuthorizeView>
     </MudExpansionPanels>
 </MudContainer>
